WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122958
[WK2] REGRESSION(
r156472
): scrolling coordinator is always enabled incorrectly.
https://bugs.webkit.org/show_bug.cgi?id=122958
Summary
[WK2] REGRESSION(r156472): scrolling coordinator is always enabled incorrectly.
Attila Dusnoki
Reported
2013-10-17 05:27:36 PDT
http://trac.webkit.org/changeset/156472/trunk/Source/WebKit2/WebProcess/WebPage/WebPage.cpp
324 m_useThreadedScrolling = parameters.store.getBoolValueForKey(WebPreferencesKey::threadedScrollingEnabledKey()); 325 m_page->settings().setScrollingCoordinatorEnabled(m_useThreadedScrolling); You can easily reproduce it on WebKitNix's MiniBrowser in desktop mode where scrolling doesn't work at all. I think the lines above should be in #if ENABLE(THREADED_SCROLLING) guard. USE(COORDINATED_GRAPHICS) platforms set ScrollingCoordinatorEnabled in WebPage::setUseFixedLayout(bool fixed) depends on mobile or desktop mode.
Attachments
Proposed patch
(1.38 KB, patch)
2013-10-17 05:40 PDT
,
Attila Dusnoki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Attila Dusnoki
Comment 1
2013-10-17 05:40:58 PDT
Created
attachment 214446
[details]
Proposed patch
Tim Horton
Comment 2
2013-10-17 10:32:14 PDT
Whoops. This might explain what happened on Lion a few days ago :|
WebKit Commit Bot
Comment 3
2013-10-17 10:58:31 PDT
Comment on
attachment 214446
[details]
Proposed patch Clearing flags on attachment: 214446 Committed
r157580
: <
http://trac.webkit.org/changeset/157580
>
WebKit Commit Bot
Comment 4
2013-10-17 10:58:34 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug