[WK2] REGRESSION(r156472): scrolling coordinator is always enabled incorrectly. https://bugs.webkit.org/show_bug.cgi?id=122958

Patch by Attila Dusnoki <h047679@stud.u-szeged.hu> on 2013-10-17
Reviewed by Tim Horton.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage): Missing ENABLE(THREADED_SCROLLING) guard added.

Canonical link: https://commits.webkit.org/141041@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157580 268f45cc-cd09-0410-ab3c-d52691b4dbfc