Source/WebKit2/WebProcess/WebPage/WebPage.cpp
@@ -307,8 +307,10 @@ WebPage::WebPage(uint64_t pageID, const WebPageCreationParameters& parameters)
 
     m_page = adoptPtr(new Page(pageClients));
 
+#if ENABLE(THREADED_SCROLLING)
     m_useThreadedScrolling = parameters.store.getBoolValueForKey(WebPreferencesKey::threadedScrollingEnabledKey());
     m_page->settings().setScrollingCoordinatorEnabled(m_useThreadedScrolling);
+#endif
 
     m_drawingArea = DrawingArea::create(this, parameters);
     m_drawingArea->setPaintingEnabled(false);
